# SPDX-FileCopyrightText: 2023 Sayantan Santra <sayantan.santra689@gmail.com>
# SPDX-License-Identifier: MIT

[package]
name = "chhoto-url"
version = "6.5.8"
edition = "2021"
authors = ["Sayantan Santra <sayantan[dot]santra689[at]gmail[dot]com"]
license = "mit"
description = "A simple selfhosted URL shortener with no unnecessary features."
homepage = "https://github.com/SinTan1729/chhoto-url"
documentation = "https://github.com/SinTan1729/chhoto-url"
repository = "https://github.com/SinTan1729/chhoto-url"
readme = "README.md"
keywords = [
    "docker",
    "rust",
    "self-hosted",
    "url-shortener",
    "webapp",
    "shortener",
    "link-shortener",
    "actix-web",
]
categories = ["web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.12.1"
actix-files = "0.6.10"
rusqlite = { version = "0.38.0", features = [ "bundled" ] }
regex = "1.12.3"
rand = "0.10.0"
passwords = "3.1.16"
actix-session = { version = "0.11.0", features = [ "cookie-session" ] }
nanoid = "0.4.0"
serde = { version = "1.0.228", features = [ "derive", "rc" ] }
serde_json = "1.0.149"
argon2 = "0.5.3"
chrono = "0.4.43"
tokio = "1.49.0"
log = "0.4.29"
env_logger = "0.11.9"

[dev-dependencies]
actix-http = "3.11.2"
actix-service = "2.0.3"
regex = "1.12.3"
