# SPDX-FileCopyrightText: 2023 Sayantan Santra <sayantan.santra689@gmail.com>
# SPDX-License-Identifier: MIT

[package]
name = "chhoto-url"
version = "7.4.1"
edition = "2024"
authors = ["Sayantan Santra <mail@sayantansantra.com>"]
license = "mit"
description = "A simple selfhosted URL shortener with no unnecessary features."
homepage = "https://github.com/SinTan1729/chhoto-url"
documentation = "https://github.com/SinTan1729/chhoto-url"
repository = "https://github.com/SinTan1729/chhoto-url"
readme = "README.md"
keywords = [
    "docker",
    "podman",
    "container",
    "quadlet",
    "rust",
    "chhoto-url",
    "self-hosted",
    "url-shortener",
    "webapp",
    "shortener",
    "link-shortener",
    "actix-web",
]
categories = ["web-programming"]
rust-version = "1.96"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[dependencies]
actix-web = "4.14.0"
actix-files = "0.6.10"
rusqlite = { version = "0.40.1", features = [ "backup", "bundled" ] }
regex = "1.12.4"
rand = "0.10.1"
passwords = "3.1.16"
actix-session = { version = "0.11.0", features = [ "cookie-session" ] }
nanoid = "0.5.0"
serde = { version = "1.0.228", features = [ "derive", "rc" ] }
serde_json = "1.0.150"
argon2 = "0.5.3"
chrono = "0.4.45"
tokio = { version = "1.52.3", features = [ "macros" ] }
log = "0.4.33"
env_logger = "0.11.11"
url = "2.5.8"

[dev-dependencies]
actix-http = "3.13.1"
actix-service = "2.0.3"
regex = "1.12.4"
tempfile = "3.27.0"
